# pneuma

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/pneuma-acts/: Cargo.toml  README.md
crates/pneuma-acts/src/: agent.rs  browser.rs  file.rs  inspection.rs  lib.rs  selection.rs  spaces.rs  workspace.rs
crates/pneuma-acts/tests/: registry.rs  registry_lookup.rs
crates/pneuma-arcan-bridge/: Cargo.toml  README.md
crates/pneuma-arcan-bridge/src/: lib.rs
crates/pneuma-arcan-bridge/tests/: executor_dispatch.rs
crates/pneuma-core/: Cargo.toml  README.md
crates/pneuma-core/src/: act.rs  confidence.rs  directive.rs  error.rs  lib.rs  modifier.rs  policy.rs  provenance.rs  referent.rs  response.rs
crates/pneuma-core/tests/: confidence_aggregation.rs  contract_guarantees.rs  lifecycle.rs  policy_envelope.rs  serialization.rs  streaming_substrate.rs
crates/pneuma-demo/: Cargo.toml  README.md
crates/pneuma-demo/src/: lib.rs  main.rs  parser.rs
crates/pneuma-demo/tests/: browser_navigate_e2e.rs  full_arcan_loop.rs  full_loop.rs  full_navigate_loop.rs  full_switch_app_loop.rs  observer_integration.rs  parser_patterns.rs
crates/pneuma-hud/: Cargo.toml  README.md
crates/pneuma-hud/src/: lib.rs
crates/pneuma-hud/tests/: render.rs
crates/pneuma-lago-bridge/: Cargo.toml  README.md
crates/pneuma-lago-bridge/src/: lib.rs
crates/pneuma-lago-bridge/tests/: end_to_end_ratify.rs  end_to_end_rename.rs  journal.rs
crates/pneuma-praxis-bridge/: Cargo.toml  README.md
crates/pneuma-praxis-bridge/src/: lib.rs
crates/pneuma-praxis-bridge/tests/: browser_ops.rs  file_ops.rs  workspace_ops.rs
crates/pneuma-ratify/: Cargo.toml  README.md
crates/pneuma-ratify/src/: lib.rs
crates/pneuma-ratify/tests/: decisions.rs
crates/pneuma-resolver/: Cargo.toml  README.md
crates/pneuma-resolver/src/: lib.rs
crates/pneuma-resolver/tests/: resolve.rs  streaming_bridge.rs
crates/pneuma-router/: Cargo.toml  README.md
crates/pneuma-router/src/: lib.rs
crates/pneuma-router/tests/: dispatch.rs
