[package]
name = "pneuma-arcan-bridge"
description = "Arcan (agent-runtime) executor bridge — translates Pneuma's Dispatch::Arcan(AgentPrompt) into a subprocess invocation against an external agent CLI (Claude Code, Codex, Aider, ...). The first agent-harness adapter in the MIL build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pneuma-core = { workspace = true }
pneuma-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pneuma-acts = { workspace = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
