[package]
name = "pneuma-resolver"
description = "Deictic / anaphor resolver for MIL — replaces Anaphor referent values ('this', 'that', 'the focused window') with concrete typed referents read from a sensorium WorkspaceContext."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pneuma-core = { workspace = true }
sensorium-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sensorium-context = { workspace = true }
chrono = { workspace = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
